--- a/Top-Academy/WEB/Python/Lessons/django/PassGen/generator/templates/generator/about.html
+++ b/Top-Academy/WEB/Python/Lessons/django/PassGen/generator/templates/generator/about.html
@@ -3,14 +3,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Password</title>
+    <title>About</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
 <div class="container">
     <div class="main-card">
-        <h1>Your password:</h1>
-        <p>{{ password }}</p>
+        <h1>Password generator</h1>
+        <p>This is a passgen that was created with django.</p>
         <button><a href="{% url 'home' %}">Return to main page</a></button>
     </div>
 </div>
