--- a/Top-Academy/WEB/Python/Lessons/django/PassGen/generator/templates/generator/home.html
+++ b/Top-Academy/WEB/Python/Lessons/django/PassGen/generator/templates/generator/home.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
@@ -17,7 +17,7 @@
                     {% if i == 12 %}
                     <option value="{{ i }}" selected>{{ i }}</option>
                     {% else %}
-                 <option value="{{ i }}">{{ i }}</option>
+                    <option value="{{ i }}">{{ i }}</option>
                     {% endif %}
                     {% endfor %}
                 </select> Amount of symbols</li>
@@ -36,6 +36,7 @@
             </ul>
         <input type="submit" value="Generate Password">
         </form>
+        <a href="{% url 'about' %}">FAQ</a>
     </div>
 </div>
 </body>
