--- a/Top-Academy/WEB/Python/Lessons/django/Todos/todo/static/css/style.css
+++ b/Top-Academy/WEB/Python/Lessons/django/Todos/todo/static/css/style.css
@@ -1,91 +1,165 @@
 body {
-    padding: 0;
-    margin: 0;
-    font-family: "JetBrains Mono";
+	padding: 0;
+	margin: 0;
+	font-family: 'JetBrains Mono';
 }
 
 .wrap {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px 30px;
-    box-sizing: border-box;
+	max-width: 1200px;
+	margin: 0 auto;
+	padding: 20px 30px;
+	box-sizing: border-box;
 }
 
 .menu {
-    background: #003366;
-    box-shadow: 0 2px 12px 2px #003366;
+	background: #003366;
+	box-shadow: 0 2px 12px 2px #003366;
 }
 
 ul {
-    list-style: none;
-    padding: 0;
+	list-style: none;
+	padding: 0;
 }
- 
+
 .menu ul {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 20px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	font-size: 20px;
 }
- 
+
 .menu .logo {
-    color: #FFF;
-    margin-right: 30%;
+	color: #fff;
+	margin-right: 30%;
 }
- 
+
 a {
-    text-decoration: none;
+	text-decoration: none;
 }
- 
+
 .menu a {
-    color: #FFF;
+	color: #fff;
 }
 
 .content .wrap {
-    margin-top: 40px;
+	margin-top: 40px;
 }
- 
-h1, h2 {
-    color: #003366;
+
+h1,
+h2 {
+	color: #003366;
 }
- 
+
 .btn {
-    background: #003366;
-    color: #FFF;
+	background: #003366;
+	color: #fff;
 }
- 
+
 button {
-    border-radius: 6px;
-    padding: 10px 40px;
-    box-shadow: inset 0 0 6px 2px #FFF;
-    margin-top: 40px;
-    font-size: 24px;
-    cursor: pointer;
+	border-radius: 6px;
+	padding: 10px 40px;
+	box-shadow: inset 0 0 6px 2px #fff;
+	margin-top: 40px;
+	font-size: 24px;
+	cursor: pointer;
 }
 .center {
-    text-align: center;
+	text-align: center;
 }
- 
-input {
-    width: 100%;
-    padding: 6px 10px;
-    box-sizing: border-box;
-    margin-top: 4px;
+
+input,
+textarea {
+	width: 100%;
+	padding: 6px 10px;
+	box-sizing: border-box;
+	margin-top: 4px;
 }
- 
+
 .bg {
-    padding: 40px;
-    box-sizing: border-box;
-    box-shadow: 0 2px 12px 2px #003366;
-    border-radius: 6px;
+	padding: 40px;
+	box-sizing: border-box;
+	box-shadow: 0 2px 12px 2px #003366;
+	border-radius: 6px;
 }
- 
+
 .top {
-    padding: 4px 24px;
-    margin-top: 0;
-    background: transparent;
-    border: 0;
-    color: #FFF;
-    box-shadow: inset 0 0 0 0 transparent;
-    font-size: 20px;
+	padding: 4px 24px;
+	margin-top: 0;
+	background: transparent;
+	border: 0;
+	color: #fff;
+	box-shadow: inset 0 0 0 0 transparent;
+	font-size: 20px;
+}
+
+.content li {
+	box-shadow: 0 2px 8px 2px #003366;
+	margin-bottom: 20px;
+	font-size: 20px;
+}
+
+.content a {
+	color: #000;
+	display: block;
+	padding: 20px;
+}
+
+.but {
+	display: flex;
+	align-items: flex-end;
+}
+
+.good {
+	background: darkgreen;
+}
+
+.remove {
+	background: darkred;
+}
+
+a b {
+	color: orangered;
+}
+
+.list {
+	padding: 20px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.list > span {
+	flex-basis: 60%;
+}
+
+.date {
+	text-align: right;
+}
+
+.register {
+	margin-top: -16px;
+}
+
+.register li {
+	box-shadow: none;
+	font-size: 14px;
+	margin-bottom: 0;
+}
+
+.helptext {
+	font-size: 14px;
+}
+
+.register label {
+	color: teal;
+	font-size: 18px;
+	font-weight: bold;
+}
+
+.register button {
+	margin-top: 10px;
+}
+
+#id_important {
+	width: 20px;
+	height: 20px;
 }
