--- a/Top-Academy/WEB/Python/Lessons/django/Todos/todo/templates/todo/home.html
+++ b/Top-Academy/WEB/Python/Lessons/django/Todos/todo/templates/todo/home.html
@@ -8,6 +8,9 @@
     <h2>Для чего нужен Upservice</h2>
     <p>Upservice – это платформа для контроля и управления вашим бизнесом.</p>
     <p>Помогает находить слабые стороны в работе сотрудников и улучшать уровень обслуживания клиентов.</p>
+    <form action="{% url 'loginuser' %}">
+        <button class="btn">Начать</button>
+    </form>
 </div>
 
 {% endblock %}
